--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
           <li class="text-white font-bold text-lg hover:underline">
-            <a href="prepa.html">قسم التحضيري</a>
+            <a href="#">قسم التحضيري</a>
           </li>
           <li class="text-white font-bold text-lg hover:underline">
             <a href="#">المدرسة القرانية</a>
