--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
   </head>
   <body class="bg-gray-50">
-    <div id="app" class="container w-auto max-w-full">
+      <div id="app" class="container mx-auto px-4 max-w-full">
       <header class="bg-green-400 p-2 flex flex-row justify-between">
         <a href="index.html"
           ><h1 class="text-white font-bold text-3xl mt-6 m-2">البدر</h1></a
