--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
           <li class="text-white font-bold text-lg hover:underline">
-            <a href="prepa.html">قسم التحضيري</a>
+            <a href="#">قسم التحضيري</a>
           </li>
           <li class="text-white font-bold text-lg hover:underline">
             <a href="#">المدرسة القرانية</a>
@@ -35,17 +35,25 @@
         </ul>
       </nav>
       <!-----Form----->
-      <div class="flex items-center justify-center p-3 mt-10 m-auto">
-        <form class="bg-white w-full shadow p-3 rounded-lg">
+      <div class="flex justify-center items-start p-3 mt-10">
+
+        <form class="bg-white w-full max-w-lg shadow p-6 rounded-lg">
+
           <div class="flex flex-col items-center justify-center">
             <img class="rounded-full" src="reading.png" width="80" />
             <h2 class="font-bold text-lg">التسجيل في قسم التحضيري</h2>
           </div>
           <div>
             <ul class="flex flex-row justify-around">
-              <li :class="{'font-bold text-green-500 ': s >= 0}">معلومات الولي</li>
-              <li :class="{'font-bold text-green-500': s >= 1}">معلومات الطفل</li>
-              <li :class="{'font-bold text-green-500': s === 2}">تأكيد المعلومات</li>
+              <li :class="{'font-bold text-green-500 ': s >= 0}">
+                معلومات الولي
+              </li>
+              <li :class="{'font-bold text-green-500': s >= 1}">
+                معلومات الطفل
+              </li>
+              <li :class="{'font-bold text-green-500': s === 2}">
+                تأكيد المعلومات
+              </li>
             </ul>
             <div class="h-2 bg-gray-200 ml-3 mr-3 rounded flex justify-right">
               <div class="h-2 bg-green-300 w-1/3" v-if="s==0"></div>
@@ -173,7 +181,12 @@
               />
               <p class="font-bold">
                 الموافقة على
-                <a href="" class="text-green-500 underline">شروط الاستخدام</a>
+                <a
+                  href="#"
+                  @click.prevent="showTerms = true"
+                  class="text-green-500 underline"
+                  >شروط الاستخدام</a
+                >
               </p>
             </div>
             <div class="mt-3 ml-2 mr-2 flex justify-center">
@@ -184,7 +197,52 @@
                 التالي
               </button>
             </div>
+            <!---terms-->
+            <!-- نافذة شروط الاستخدام -->
+            <div
+              v-if="showTerms"
+              class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50"
+            >
+              <div
+                class="bg-white rounded-lg shadow-lg w-11/12 md:w-2/3 lg:w-1/2 p-6 max-h-[80vh] overflow-y-auto relative"
+              >
+                <button
+                  @click="showTerms = false"
+                  class="absolute top-2 left-2 text-gray-600 hover:text-black text-2xl"
+                >
+                  &times;
+                </button>
+                <h2 class="text-xl font-bold mb-4 text-green-500 text-center">
+                  شروط الاستخدام
+                </h2>
+                <p class="mb-2">
+                  <strong>1. البيانات الشخصية:</strong> تُستخدم فقط لأغراض
+                  التسجيل، ونضمن سريتها وعدم مشاركتها مع جهات خارجية.
+                </p>
+                <p class="mb-2">
+                  <strong>2. الاستخدام:</strong> هذه المنصة مخصصة لتسجيل الأطفال
+                  في قسم التحضيري والبرامج التعليمية الأخرى فقط.
+                </p>
+                <p class="mb-2">
+                  <strong>3. المسؤولية:</strong> يجب أن يكون المسجل هو الولي
+                  الشرعي أو الوصي على الطفل.
+                </p>
+                <p class="mb-2">
+                  <strong>4. الأمان:</strong> نسعى لحماية بياناتكم، لكننا لا
+                  نضمن الحماية الكاملة من التهديدات الإلكترونية.
+                </p>
+                <p class="mb-2">
+                  <strong>5. التعديلات:</strong> قد يتم تحديث هذه الشروط دون
+                  إشعار مسبق، ويتعين على المستخدم مراجعتها دورياً.
+                </p>
+                <p>
+                  <strong>6. تواصل معنا:</strong> لأي استفسار، الرجاء استخدام
+                  صفحة "تواصل معنا".
+                </p>
+              </div>
+            </div>
           </div>
+
           <!--child Info-->
           <div id="step" v-if="s==1">
             <div class="mt-5 ml-2 mr-2">
@@ -308,36 +366,79 @@
           <div v-if="s === 2">
             <h2 class="text-xl font-bold text-center mb-4">تأكيد المعلومات</h2>
             <div class="mb-4">
-                <p class="text-red-500 font-semibold">معلومات الولي / الوصي</p>
-                <p><span class="font-bold">الاسم:</span> {{ parent_fname }}</p>
-                <p><span class="font-bold">اللقب:</span> {{ parent_lname }}</p>
-                <p><span class="font-bold">تاريخ الميلاد:</span> {{ parent_bdate }}</p>
-                <p><span class="font-bold">مكان الميلاد:</span> ولاية {{parent_wilaya}} دائرة {{parent_daira}} بلدية {{parent_commune}}</p>
-                <p><span class="font-bold">رقم التعريف الوطني:</span> {{ parent_id }}</p>
-                <p><span class="font-bold">رقم الهاتف:</span> 0{{ parent_phone }}</p>
-                <p><span class="font-bold">عنوان الاقامة:</span>{{ parent_residence }}</p>
-                <p><span class="font-bold">صلة القرابة:</span> {{ parent_relation }}</p>
-
+              <p class="text-red-500 font-semibold">معلومات الولي / الوصي</p>
+              <p><span class="font-bold">الاسم:</span> {{ parent_fname }}</p>
+              <p><span class="font-bold">اللقب:</span> {{ parent_lname }}</p>
+              <p>
+                <span class="font-bold">تاريخ الميلاد:</span> {{ parent_bdate }}
+              </p>
+              <p>
+                <span class="font-bold">مكان الميلاد:</span> ولاية
+                {{parent_wilaya}} دائرة {{parent_daira}} بلدية
+                {{parent_commune}}
+              </p>
+              <p>
+                <span class="font-bold">رقم التعريف الوطني:</span> {{ parent_id
+                }}
+              </p>
+              <p>
+                <span class="font-bold">رقم الهاتف:</span> 0{{ parent_phone }}
+              </p>
+              <p>
+                <span class="font-bold">عنوان الاقامة:</span>{{ parent_residence
+                }}
+              </p>
+              <p>
+                <span class="font-bold">صلة القرابة:</span> {{ parent_relation
+                }}
+              </p>
             </div>
             <div class="mb-4">
-                <p class="text-red-500 font-semibold">معلومات الطفل</p>
-                <p><span class="font-bold">الاسم:</span> {{ child_fname }}</p>
-                <p><span class="font-bold">اللقب:</span> {{ child_lname }}</p>
-                <p><span class="font-bold">تاريخ الميلاد:</span> {{ child_bdate }}</p>
-                <p><span class="font-bold">مكان الميلاد:</span> ولاية {{child_wilaya}} دائرة {{child_daira}} بلدية {{child_commune}}</p>
-                <p><span class="font-bold">رقم شهادة الميلاد:</span> {{ child_id }}</p>
-                <p><span class="font-bold">الجنس:</span> {{ child_gender }}</p>
-                <p><span class="font-bold">الحالة الصحية:</span> {{ child_health }}</p>
-
+              <p class="text-red-500 font-semibold">معلومات الطفل</p>
+              <p><span class="font-bold">الاسم:</span> {{ child_fname }}</p>
+              <p><span class="font-bold">اللقب:</span> {{ child_lname }}</p>
+              <p>
+                <span class="font-bold">تاريخ الميلاد:</span> {{ child_bdate }}
+              </p>
+              <p>
+                <span class="font-bold">مكان الميلاد:</span> ولاية
+                {{child_wilaya}} دائرة {{child_daira}} بلدية {{child_commune}}
+              </p>
+              <p>
+                <span class="font-bold">رقم شهادة الميلاد:</span> {{ child_id }}
+              </p>
+              <p><span class="font-bold">الجنس:</span> {{ child_gender }}</p>
+              <p>
+                <span class="font-bold">الحالة الصحية:</span> {{ child_health }}
+              </p>
             </div>
             <div class="flex justify-between">
-                <button class="bg-gray-400 text-white px-6 py-2 rounded shadow hover:bg-gray-500" @click="prev_step">السابق</button>
-                <button class="bg-green-400 text-white px-6 py-2 rounded shadow hover:bg-green-500" @click="confirm">تأكيد</button>
+              <button
+                class="bg-gray-400 text-white px-6 py-2 rounded shadow hover:bg-gray-500"
+                @click="prev_step"
+              >
+                السابق
+              </button>
+              <button
+                class="bg-green-400 text-white px-6 py-2 rounded shadow hover:bg-green-500"
+                @click="confirm"
+              >
+                تأكيد
+              </button>
             </div>
-        </div>
+          </div>
         </form>
-        
       </div>
+      <footer class="bg-green-400 p-2 flex flex-row justify-center h-40 mt-10">
+        <p class="text-white font-semibold mt-16">
+          Developed By<a
+            href="https://github.com/youcefmihoubi1"
+            target="_blank"
+          >
+            @MihoubiYoucef</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
   <script>
@@ -360,6 +461,7 @@
           parent_id: null,
           parent_relation: null,
           conditions: null,
+          showTerms: false,
 
           child_fname: null,
           child_lname: null,
@@ -378,17 +480,13 @@
             if (this.validateParentInfo()) {
               this.s++;
             } else {
-              alert(
-                "الرجاء ادخال جميع المعلومات الخاصة بالولي"
-              );
+              alert("الرجاء ادخال جميع المعلومات الخاصة بالولي");
             }
           } else if (this.s === 1) {
             if (this.validateChildInfo()) {
               this.s++;
             } else {
-              alert(
-                "الرجاء ادخال جميع المعلومات الخاصة "
-              );
+              alert("الرجاء ادخال جميع المعلومات الخاصة ");
             }
           }
         },
@@ -474,16 +572,23 @@
             this.child_commune = "";
           }
         },
-        confirm(){
-            alert("تم التسجيل بنجاح")
-        }
+        confirm() {
+          alert("تم التسجيل بنجاح");
+        },
       },
       mounted() {
         fetch("wilaya.json")
           .then((res) => res.json())
           .then((data) => {
-            this.locations = data;
-            this.wilaya = [...new Set(data.map((x) => x.wilaya_name))];
+            this.locations = data.map((x) => ({
+              ...x,
+              wilaya_name: x.wilaya_name.trim(),
+              daira_name: x.daira_name.trim(),
+              commune_name: x.commune_name.trim(),
+            }));
+            this.wilaya = [
+              ...new Set(this.locations.map((x) => x.wilaya_name)),
+            ];
           });
       },
     });
