--- a/prep.html
+++ b/prep.html
@@ -21,10 +21,10 @@
       <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
           <li class="text-white font-bold text-lg hover:underline">
-            <a href="#">قسم التحضيري</a>
+            <a href="prep.html">قسم التحضيري</a>
           </li>
           <li class="text-white font-bold text-lg hover:underline">
-            <a href="#">المدرسة القرانية</a>
+            <a href="qur.html">المدرسة القرانية</a>
           </li>
           <li class="text-white font-bold text-lg hover:underline">
             <a href="#">الزكاة</a>
