--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="prep.html">قسم التحضيري</a>
           </li>
           <li class="text-white font-bold text-lg hover:underline">
-            <a href="#">المدرسة القرانية</a>
+            <a href="qur.html">المدرسة القرانية</a>
           </li>
           <li class="text-white font-bold text-lg hover:underline">
             <a href="#">الزكاة</a>
