--- a/qur.html
+++ b/qur.html
@@ -21,7 +21,7 @@
       <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
           <li class="text-white font-bold text-lg hover:underline">
-            <a href="prepa.html">قسم التحضيري</a>
+            <a href="prep.html">قسم التحضيري</a>
           </li>
           <li class="text-white font-bold text-lg hover:underline">
             <a href="qur.html">المدرسة القرانية</a>
