--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       </header>
       <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
-          <li class="text-white font-bold text-lg hover:underline">
+          <li class="text-white font-bold text-md hover:underline">
             <a href="prep.html">قسم التحضيري</a>
           </li>
-          <li class="text-white font-bold text-lg hover:underline">
+          <li class="text-white font-bold text-md hover:underline">
             <a href="qur.html">المدرسة القرانية</a>
           </li>
-          <li class="text-white font-bold text-lg hover:underline">
+          <li class="text-white font-bold text-md hover:underline">
             <a href="#">الزكاة</a>
           </li>
-          <li class="text-white font-bold text-lg hover:underline">
+          <li class="text-white font-bold text-md hover:underline">
             <a href="#">تواصل معنا</a>
           </li>
         </ul>
