--- a/qur.html
+++ b/qur.html
@@ -21,6 +21,8 @@
       <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
           <li class="text-white font-bold text-md hover:underline">
+            <a href="index.html">الصفحة الرئيسية</a>
+          <li class="text-white font-bold text-md hover:underline">
             <a href="prep.html">قسم التحضيري</a>
           </li>
           <li class="text-white font-bold text-md hover:underline">
