--- a/qur.html
+++ b/qur.html
@@ -20,18 +20,18 @@
       </header>
       <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
-          <li class="text-white font-bold text-md hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="index.html">الصفحة الرئيسية</a>
-          <li class="text-white font-bold text-md hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="prep.html">قسم التحضيري</a>
           </li>
-          <li class="text-white font-bold text-md hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="qur.html">المدرسة القرانية</a>
           </li>
-          <li class="text-white font-bold text-md hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="#">الزكاة</a>
           </li>
-          <li class="text-white font-bold text-md hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="#">تواصل معنا</a>
           </li>
         </ul>
