--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="mt-3 ml-2 mr-2 flex justify-center">
               <button
                 class="bg-green-400 w-16 rounded shadow hover:bg-green-500 text-center text-white text-md h-9"
-                @click="next_step()"
+                @click.prevent="next_step()"
               >
                 التالي
               </button>
@@ -359,7 +359,7 @@
               </button>
               <button
                 class="bg-green-400 w-16 rounded shadow hover:bg-green-500 text-center text-white text-md h-9"
-                @click="next_step()"
+                @click.prevent="next_step()"
               >
                 التالي
               </button>
@@ -423,7 +423,7 @@
               </button>
               <button
                 class="bg-green-400 text-white px-6 py-2 rounded shadow hover:bg-green-500"
-                @click="confirm"
+               @click.prevent="confirm"
               >
                 تأكيد
               </button>
