--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="qur.html">المدرسة القرانية</a>
           </li>
           <li class="text-white font-bold text-sm hover:underline">
-            <a href="#">الزكاة</a>
+            <a href="zakat.html">الزكاة</a>
           </li>
           <li class="text-white font-bold text-sm hover:underline">
             <a href="#">تواصل معنا</a>
