--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
             this.parent_commune &&
             this.parent_id &&
             this.parent_residence &&
-            phonePattern.test(this.p_phone) &&
+            phonePattern.test(this.parent_phone) &&
             this.parent_relation &&
             this.conditions
           );
