--- a/qur.html
+++ b/qur.html
@@ -29,7 +29,7 @@
             <a href="qur.html">المدرسة القرانية</a>
           </li>
           <li class="text-white font-bold text-sm hover:underline">
-            <a href="#">الزكاة</a>
+            <a href="zakat.html">الزكاة</a>
           </li>
           <li class="text-white font-bold text-sm hover:underline">
             <a href="#">تواصل معنا</a>
@@ -210,7 +210,7 @@
             <div class="mt-3 ml-2 mr-2 flex justify-center">
               <button
                 class="bg-green-400 w-16 rounded shadow hover:bg-green-500 text-center text-white text-md h-9"
-                @click="next_step()"
+                @click.prevent="next_step()"
               >
                 التالي
               </button>
@@ -330,7 +330,7 @@
               </button>
               <button
                 class="bg-green-400 w-16 rounded shadow hover:bg-green-500 text-center text-white text-md h-9"
-                @click="next_step()"
+                @click.prevent="next_step()"
               >
                 التالي
               </button>
@@ -394,7 +394,7 @@
               </button>
               <button
                 class="bg-green-400 text-white px-6 py-2 rounded shadow hover:bg-green-500"
-                @click="confirm"
+                @click.prevent="confirm"
               >
                 تأكيد
               </button>
@@ -619,7 +619,7 @@
                 </button>
                 <button
                   class="bg-green-400 text-white px-6 py-2 rounded shadow hover:bg-green-500"
-                  @click="confirm"
+                  @click.prevent="confirm"
                 >
                   تأكيد
                 </button>
@@ -711,6 +711,7 @@
           this.s--;
         },
         validateParentInfo() {
+          const phonePattern = /^[5-7][0-9]{8}$/;
           return (
             this.parent_fname &&
             this.parent_lname &&
@@ -720,13 +721,14 @@
             this.parent_commune &&
             this.parent_id &&
             this.parent_residence &&
-            this.parent_phone &&
+            phonePattern.test(this.parent_phone) &&
             this.parent_relation &&
             this.conditions
           );
         },
 
         validateAdultInfo() {
+          const phonePattern = /^[5-7][0-9]{8}$/;
           return (
             this.adult_fname &&
             this.adult_lname &&
@@ -736,7 +738,7 @@
             this.adult_commune &&
             this.adult_id &&
             this.adult_residence &&
-            this.adult_phone &&
+            phonePattern.test(this.adult_phone) &&
             this.adult_gender &&
             this.conditions
           );
