--- a/zakat.html
+++ b/zakat.html
@@ -18,18 +18,20 @@
           ><img class="ml-2" src="logo.png" alt="icon" width="90"
         /></a>
       </header>
-      <nav class="bg-green-300 p-3">
+            <nav class="bg-green-300 p-3">
         <ul class="flex flex-row justify-around">
-          <li class="text-white font-bold text-lg hover:underline">
-            <a href="prepa.html">قسم التحضيري</a>
+          <li class="text-white font-bold text-sm hover:underline">
+            <a href="index.html">الصفحة الرئيسية</a>
+          <li class="text-white font-bold text-sm hover:underline">
+            <a href="prep.html">قسم التحضيري</a>
           </li>
-          <li class="text-white font-bold text-lg hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="qur.html">المدرسة القرانية</a>
           </li>
-          <li class="text-white font-bold text-lg hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="zakat.html">الزكاة</a>
           </li>
-          <li class="text-white font-bold text-lg hover:underline">
+          <li class="text-white font-bold text-sm hover:underline">
             <a href="#">تواصل معنا</a>
           </li>
         </ul>
