--- a/qur.html
+++ b/qur.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.tailwindcss.com/"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
   </head>
-  <body class="bg-gray-50">
-    <div id="app" class="container w-auto max-w-full">
+  <body class="bg-gray-50 flex flex-col h-screen">
+    <div id="app" class="container w-auto max-w-full flex-grow">
       <header class="bg-green-400 p-2 flex flex-row justify-between">
         <a href="index.html"
           ><h1 class="text-white font-bold text-3xl mt-6 m-2">البدر</h1></a
@@ -629,7 +629,7 @@
         </form>
       </div>
     </div>
-      <footer class="bg-green-400 p-2 flex flex-row justify-center h-40 mt-10">
+      <footer class="bg-green-400 p-2 flex flex-row justify-center h-40 mb-0">
         <p class="text-white font-semibold mt-16">
           Developed By<a
             href="https://github.com/youcefmihoubi1"
