--- a/zakat.html
+++ b/zakat.html
@@ -276,7 +276,7 @@
               >
                 <option disabled value="">---اختر الحالة---</option>
                 <option value="بطال">بطال</option>
-                <option value="عامل_يومي">عامل يومي أو حرفي</option>
+                <option value="عامل يومي">عامل يومي أو حرفي</option>
                 <option value="موظف">موظف محدود الدخل</option>
                 <option value="متقاعد">متقاعد</option>
               </select>
@@ -319,7 +319,7 @@
                 required
               />
             </div>
-            <div v-if="p_job_status==='عامل_يومي'" class="mt-3 ml-2 mr-2">
+            <div v-if="p_job_status==='عامل يومي'" class="mt-3 ml-2 mr-2">
               <p class="font-bold">متوسط الدخل الشهري</p>
               <input
                 type="number"
